--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
  /* General Styles */
  body {
-    font-family: Arial, sans-serif;
+   
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
@@ -9,10 +9,11 @@
 
 /* Navigation Bar */
 nav {
-    
-    background-color: rgb(55,160,140);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(84, 144, 208);;
     opacity: 0.6;
-    padding: 0.4rem;
+    padding: 0.6rem;
+
     
 }
 
@@ -21,21 +22,23 @@ nav ul {
     
     margin: 0;
     padding: 0;
-    display: flex;
     justify-content: space-around;
-    overflow:auto;
+    overflow:hidden;
 
 }
 
 nav ul li {
     display: inline;
-    float:left;
+    float:right;
+    padding:20px;
+    overflow:hidden;
 }
 
 nav ul li a {
+    display: block;
     color: white;
     text-decoration: none;
-    padding: 3px,3px;
+    padding: 14px,16px;
     display: block;
   
 }
@@ -51,16 +54,17 @@ nav input {
 }
 nav ul li a:hover {
     color: black;
-    background-color: rgb(16, 193, 160);
+    background-color: rgb(84, 144, 208);
 }
 
 /* Header Section */
 header {
-    background-color: rgb(55,160,140);
+
+    background-color: rgb(84, 144, 208);
     opacity: 0.6;
     color: white;
-    padding: 1rem;
-    text-align: center;
+    padding: 0.8rem;
+    text-align: center; 
 }
 
 /* Main Content */
@@ -75,11 +79,76 @@ section {
 
 /* Footer */
 footer {
-    background-color: rgb(55,160,140);
+    font-family:'Courier New', Courier, monospace ;
+    background-color: rgb(84, 144, 208);
     opacity: 0.6;
     color: white;
     text-align: center;
     position: fixed;
     width: 100%;
     bottom:0
+}
+img{
+    width: 110px;
+}
+form{
+    position: relative;
+    top: 20%;
+    left: 87%;
+    transform: translate(-50%,-50%);
+    transition: all 1s;
+    width: 50px;
+    height: 40px;
+    background: white;
+    box-sizing: border-box;
+    border-radius: 25px;
+    border: 4px solid white;
+    padding: 5px;
+}
+
+input{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 42.5px;
+    line-height: 30px;
+    outline: 0;
+    border: 0;
+    display: none;
+    font-size: 1em;
+    border-radius: 20px;
+    padding: 0 20px;
+}
+
+.fa{
+    box-sizing: border-box;
+    padding: 10px;
+    width: 42.5px;
+    height: 42.5px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    color :rgb(84, 144, 208);
+    text-align: center;
+    font-size: 1.2em;
+    transition: all 1s;
+}
+
+form:hover{
+    width: 300px;
+    cursor: pointer;
+}
+
+form:hover input{
+    display: block;
+}
+
+form:hover .fa{
+    background: rgb(84, 144, 208);
+    color: white;
+}
+video{
+    width:1520px;
 }
